--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "homepage": "http://gitname.github.io/app-next.js",
   "name": "wauters-new",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
@@ -20,5 +23,8 @@
     "react-social-icons": "^5.4.1",
     "react-spotify-player": "^1.0.4",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
