Publish it to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gitname.github.io/app-next.js",
+  "homepage": "http://Think23.github.io/app-next.js",
   "name": "wauters-new",
   "version": "0.1.0",
   "private": true,
